--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -19,18 +19,102 @@
     flex-direction: column; 
     align-items: center; 
     padding: 8px 0;
+    gap: 0;         
+    line-height: 0; 
 
     img{
         display: block;
         width: 30px; 
         height: auto;
-        margin: 0 auto;
+        margin: 0 ;
 
         &.sub-logo{
             width: 200px;
             height: auto;
-            margin-top: 5px; 
+            margin: 0;
+        }
+
+       
+    }
+
+}
+.sub-logo2{
+    width: 200px;
+    height: auto;
+    margin: 0;
+}
+
+
+nav{
+    display: block;
+    text-align: center;
+    position: absolute;
+    height: 210px;
+    top: 50%;
+    margin-top: -120px;
+    width: 100%;
+
+    a{
+        font-size: 22px;
+        color: #40404e;
+        display: block;
+        line-height: 51px;
+        position: relative;
+        text-decoration: none;
+
+        i {
+            transition: all 0.4s ease-out;
+        }
+    
+        &:hover{
+            color: #ffd700;
+    
+            svg{
+                opacity: 0;
+            }
+    
+            &:after{
+                opacity: 1;
+            }
+    
+        }
+    
+        &:after{
+            content: '';
+            font-size: 9px;
+            letter-spacing: 2px;
+            position: absolute;
+            bottom: 0;
+            display: block;
+            width: 100%;
+            text-align: center;
+            opacity: 0;
+            transition: all 0.3s ease-out
+        }
+    
+        &:first-child{
+            &::after{
+                content: 'HOME';
+            }
         }
     }
 
+    a.about-link{
+        &::after{
+            content: 'ABOUT';
+        }
+    }
+    a.contact-link{
+        &::after{
+            content: 'CONTACT';
+        }
+    }
+
+    a.active{
+        svg{
+            color: #ffd700;
+        }
+    }
+
+   
 }
