--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -1,4 +1,4 @@
-.nav-bar{
+.nav-bar {
     background: #181818;
     width: 100px;
     height: 100%;
@@ -9,43 +9,39 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    justify-content: flex-start; 
-    padding-top: 16px; 
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 16px;
 }
 
-.logo{
+.logo {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
+    flex-direction: column;
+    align-items: center;
     padding: 8px 0;
-    gap: 0;         
-    line-height: 0; 
+    gap: 0;
+    line-height: 0;
 
-    img{
+    img {
         display: block;
-        width: 30px; 
+        width: 30px;
         height: auto;
-        margin: 0 ;
+        margin: 0;
 
-        &.sub-logo{
+        &.sub-logo {
             width: 200px;
             height: auto;
             margin: 0;
         }
-
-       
     }
-
 }
-.sub-logo2{
+.sub-logo2 {
     width: 200px;
     height: auto;
     margin: 0;
 }
 
-
-nav{
+nav {
     display: block;
     text-align: center;
     position: absolute;
@@ -54,7 +50,7 @@ nav{
     margin-top: -120px;
     width: 100%;
 
-    a{
+    a {
         font-size: 22px;
         color: #40404e;
         display: block;
@@ -65,22 +61,21 @@ nav{
         i {
             transition: all 0.4s ease-out;
         }
-    
-        &:hover{
+
+        &:hover {
             color: #ffd700;
-    
-            svg{
+
+            svg {
                 opacity: 0;
             }
-    
-            &:after{
+
+            &:after {
                 opacity: 1;
             }
-    
         }
-    
-        &:after{
-            content: '';
+
+        &:after {
+            content: "";
             font-size: 9px;
             letter-spacing: 2px;
             position: absolute;
@@ -89,32 +84,60 @@ nav{
             width: 100%;
             text-align: center;
             opacity: 0;
-            transition: all 0.3s ease-out
+            transition: all 0.3s ease-out;
         }
-    
-        &:first-child{
-            &::after{
-                content: 'HOME';
+
+        &:first-child {
+            &::after {
+                content: "HOME";
             }
         }
     }
 
-    a.about-link{
-        &::after{
-            content: 'ABOUT';
+    a.about-link {
+        &::after {
+            content: "ABOUT";
         }
     }
-    a.contact-link{
-        &::after{
-            content: 'CONTACT';
+    a.contact-link {
+        &::after {
+            content: "CONTACT";
         }
     }
 
-    a.active{
-        svg{
+    a.project-link {
+        &::after {
+            content: "PROJECTS";
+        }
+    }
+    a.active {
+        svg {
             color: #ffd700;
         }
     }
-
-   
 }
+
+    ul {
+        position: absolute;
+        bottom: 20px;
+        width: 100%;
+        padding: 0;
+        display: block;
+        list-style: none;
+        text-align: center;
+        margin: 0;
+
+        li {
+            a {
+                padding: 7px 0;
+                display: block;
+                font-size: 15px;
+                line-height: 16px;
+               
+            }
+            &:hover svg{
+                color: yellow;
+            }
+        }
+    }
+
