--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -92,10 +92,11 @@
     p{
         font: 20px;
         color: white;
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: 300;
+        font-family:'Poppins';
+        font-weight: 400;
         min-width: fit-content;
         animation: pulse 1s;
+        
 
         &:nth-of-type(1){
             animation-delay: 1.1s;
