Did the contact page, yet to fix some design bugs

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -118,3 +118,15 @@
 
     
 }
+
+.devImg{
+    z-index: 0;
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    top: 20%;
+    right: 15%;
+    left: auto;
+    bottom: 0;
+    margin: auto;
+}
