--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -17,11 +17,65 @@
             opacity: 0;
             animation: fadeInUp 2s 2s;
             animation-fill-mode: forwards;
+            clear: both;
+        }
+
+        li.half{
+            width:49%;
+            margin-left: 2%;
+            float: left;
+            clear: none;
+
+            &:first-child{
+                margin-left: 0;
+            }
 
         }
         
 
     }
+
+    input[type='text'],
+    input[type='email']{
+        width: 100%;
+        border: 0;
+        background: #115173;
+        height: 50px;
+        font-size: 16px;
+        color: white;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+    textarea{
+        width: 100%;
+        border: 0;
+        background: #115173;
+        height: 50px;
+        font-size: 16px;
+        color: white;
+        padding: 20px;
+        min-height: 150px;
+        box-sizing: border-box;
+
+    }
+
+    .flat-buttonc{
+    color: #ffd700;
+    font-size: 11px;
+    letter-spacing: 3px;
+    text-decoration: none;
+    padding: 8px 10px;
+    border: 1px solid #ffd700;
+    float: left;
+    font-family: 'Inter';
+    border-radius: 4px;
+    background: 0 0;
+    text-transform: uppercase;
+    float: right;
+    text-align: center;
+    margin-right: 10px;
+    }
+
 
 
 }
