--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -75,3 +75,44 @@
     align-items: flex-start; 
     gap: 2rem; 
 }
+
+.info-map{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 50px;
+    right: 30%;
+    z-index: 999999;
+    width: 267px;
+    padding: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    opacity: 0;
+    animation: fadeIn 1s 1.5s;
+    animation-fill-mode: forwards;
+
+    span{
+        font-size: 16px;
+        display: block;
+        padding-top: 20px;
+        color: yellow;
+
+
+
+    }
+}
+.map-wrap {
+    position: absolute; 
+    top: 0; 
+    right: 0; 
+    width: 50%; 
+    height: 100%; 
+    background-color: rgba(0, 253, 216, 0.3); 
+}
+
+.map-wrap iframe {
+    width: 100%; 
+    height: 100%; 
+    border: none;
+    border-radius: 5px;
+}
