--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -87,57 +87,79 @@ h2 {
         color: #333;
     }
 }
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
     .home-page {
         .text-zone {
-            width: 50%;
-            left: 8%;
+            position: absolute;
+            width: 90%;
+            left:45%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         h1 {
-            font-size: 48px;
-            line-height: 45px;
+            font-size: 70px;
+            line-height: 40px;
+            text-align: center;
+            padding: 10px;
 
             &::before {
-                font-size: 16px;
-                margin-top: -35px;
+                font-size: 40px;
+                margin-top: -60px;
+                left: 0;
+                width: 100%;
+                text-align: center;
+                padding: 10px;
+
             }
 
             &::after {
-                font-size: 16px;
+                font-size: 40px;
                 margin-top: 15px;
+                margin-left: 0;
+                width: 100%;
+                text-align: center;
+                position: relative;
+                display: block;
+                padding: 10px;
             }
 
             img {
-                display: flex;
-                align-items: center;
-                gap: 4px;
-                position: relative;
-                left: 5;
-                width: 28px;
+                width: 20px;
+                
             }
         }
     }
 
     h2 {
-        font-size: 14px;
-        letter-spacing: 2.5px;
+        font-size: 25px;
+        position: relative;
+        left: 13%;
+        letter-spacing: 2px;
+        text-align: center;
+        margin-top: 15px;
     }
 
     .flat-button {
-        font-size: 12px;
-        padding: 8px 8px;
-        letter-spacing: 3px;
+        float: none;
+        display: block;
+        margin: 20px auto 0;
+        width: fit-content;
+        text-align: center;
+        font-size: 20px;
+        padding: 20px 24px;
     }
+
 }
 
 /* Mobile Responsiveness (max-width: 768px) */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
     .home-page {
         .text-zone {
             position: absolute;
             width: 90%;
-            left: 40%;
+            left: 20%;
             transform: translate(-50%, -50%);
             padding: 20px;
             box-sizing: border-box;
@@ -189,7 +211,7 @@ h2 {
         width: fit-content;
         text-align: center;
         font-size: 20px;
-        padding: 20px 24px;
+        padding: 40px 24px;
     }
 
     
@@ -197,10 +219,12 @@ h2 {
 
 /* Small Mobile Responsiveness (max-width: 480px) */
 @media screen and (max-width: 480px) {
+    
+
     .home-page {
         .text-zone {
             position: absolute;
-            left: 150px;
+            left:10px;
             width: 95%;
             padding: 15px;
         }
@@ -211,7 +235,7 @@ h2 {
 
             &::before,
             &::after {
-                font-size: 12px;
+                font-size: 20px;
             }
 
             img {
@@ -221,9 +245,10 @@ h2 {
     }
 
     h2 {
-        font-size: 12px;
+        font-size: 15px;
         letter-spacing: 1.5px;
         margin-top: 12px;
+        left: 6px;
     }
 
     .flat-button {
@@ -231,6 +256,11 @@ h2 {
         padding: 7px 10px;
         letter-spacing: 2px;
         margin-top: 15px;
+
+        &:hover {
+            background: yellow;
+            color: #333;
+        }
     }
 }
 
@@ -254,3 +284,6 @@ h2 {
         opacity: 1;
     }
 }
+
+
+
