--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -197,12 +197,15 @@
   // body{
   //   background-color: red;
   // }
+
+  
   .stage-cube-cont {
     position: relative;
     width: 80%;
     height: 300px;
     padding-top: 0px;
     left: 0;
+    top: 85%;
     
     
     // overflow: visibile;
@@ -218,9 +221,13 @@
 
     // padding: 20px;
     box-sizing: border-box;
+
+   
   }
 
   p {
+
+  
     font-size: 10px;
     position: relative;
     right: 10%;
@@ -239,9 +246,9 @@
     margin-left: calc(50% - 60px);
 
     div {
-      width: 120px;
-      height: 120px;
-      font-size: 60px;
+      width: 60px;
+      height: 30px;
+      font-size: 30px;
       box-shadow: 0 0 15px 0px lightyellow;
     }
 
