--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -219,12 +219,13 @@
 
 // Small Mobile Styles (max-width: 480px)
 @media screen and (max-width: 480px) {
-    .text-zone {
-        position: relative;
+    .contact-page .text-zone {
+        position: absolute;
         left: 10%;
-        top: 10%;
+        top: 40%;
+        
         transform: translateY(-50%);
-        width: 100%;
+        width: 90%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
@@ -232,9 +233,9 @@
       }
       
       p{
-        font-size: 10px;
+        font-size: 12px;
         position: relative;
-        right: 10%;
+        right: 12%;
         padding: 5px;
       }
       
@@ -243,15 +244,20 @@
       h1 {
         font-size: 18px;
         line-height: 40px;
-        padding: 15px;
+        padding: 20px;
+
+        &::before{
+            padding: 10px;
+        }
        
       }
 
 
     .contact-form {
         position: absolute;
-        top: 450px;
-        width: 50%;
+        top: 500px;
+        right: 90px;
+        width: 80%;
         padding: 1.5rem;
         margin-top: 1rem;
 
@@ -271,8 +277,10 @@
             }
 
             .flat-buttonc {
-                padding: 0.6rem;
-                font-size: 14px;
+                padding: 0rem;
+                font-size: 13px;
+                width: 30%;
+                float: right;
             }
         }
     }
@@ -280,14 +288,17 @@
 
     .info-map {
         position: relative;
-        top: 0;
+        top: -15px;
         right: 0px;
-        left: 70px;
-       
+        left: 50px;
+        
         width: 60%;
         margin-bottom: 1rem;
         box-sizing: border-box;
         font-size: 10px;
+        span{
+            font-size: 10px;
+        }
     }
 
     .map-wrap {
