--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -157,63 +157,112 @@
 
 // Mobile Styles (max-width: 768px)
 @media screen and (min-width: 481px) and (max-width: 768px) {
+    .contact-page .text-zone {
+        position: absolute;
+        left: 10%;
+        top: 40%;
+        
+        transform: translateY(-50%);
+        width: 90%;
+        vertical-align: middle;
+        display: table-cell;
+        max-height: 90%;
+          
+      }
+      
+      p{
+        font-size: 12px;
+        position: relative;
+        right: 14%;
+        padding: 5px;
+      }
+      
+      
+      
+      h1 {
+        font-size: 18px;
+        line-height: 40px;
+        padding: 20px;
+
+        &::before{
+            padding: 15px;
+        }
+       
+      }
+
+
     .contact-form {
-        margin-top: 2rem;
-        padding: 2rem;
-        max-width: 100%;
+        position: absolute;
+        top: 500px;
+        right: 90px;
+        width: 80%;
+        padding: 1.5rem;
+        margin-top: 1rem;
 
         ul {
             li {
-                margin-bottom: 0.8rem;
-
-                &.half {
-                    width: 100%;
-                    margin-right: 0;
-                }
+                margin-bottom: 0.6rem;
             }
 
             input,
             textarea {
-                font-size: 14px;
-                padding: 0.8rem;
+                font-size: 13px;
+                padding: 0.6rem;
             }
 
             textarea {
-                height: 100px;
+                height: 80px;
             }
 
             .flat-buttonc {
-                width: 100%;
-                text-align: center;
-                padding: 0.8rem;
+                padding: 0rem;
+                font-size: 13px;
+                width: 30%;
+                float: right;
             }
         }
     }
-
-    .text-zone {
-        gap: 1.5rem;
-        width: 100%;
-    }
+    
 
     .info-map {
         position: relative;
-        top: 0;
-        right: 0;
-        width: 100%;
+        top: -15px;
+        right: 0px;
+        left: 50px;
+        
+        width: 60%;
         margin-bottom: 1rem;
         box-sizing: border-box;
-
-        span {
-            font-size: 14px;
-            padding-top: 10px;
+        font-size: 10px;
+        span{
+            font-size: 10px;
         }
     }
 
     .map-wrap {
-        position: relative;
-        width: 100%;
-        height: 300px;
-        margin-top: 1rem;
+        visibility: hidden;
+        height: 250px;
+    }
+}
+
+// Animations
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
