--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -155,63 +155,47 @@ h2 {
 
 /* Mobile Responsiveness (max-width: 768px) */
 @media screen and (min-width: 481px) and (max-width: 768px) {
+   
     .home-page {
         .text-zone {
             position: absolute;
-            width: 90%;
-            left: 20%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            box-sizing: border-box;
+            left:10px;
+            width: 95%;
+            padding: 15px;
         }
 
         h1 {
-            font-size: 70px;
-            line-height: 40px;
-            text-align: center;
+            font-size: 32px;
+            line-height: 36px;
 
-            &::before {
-                font-size: 14px;
-                margin-top: -30px;
-                left: 0;
-                width: 100%;
-                text-align: center;
-            }
-
+            &::before,
             &::after {
-                font-size: 14px;
-                margin-top: 12px;
-                margin-left: 0;
-                width: 100%;
-                text-align: center;
-                position: relative;
-                display: block;
+                font-size: 20px;
             }
 
             img {
                 width: 20px;
-                
             }
         }
     }
 
     h2 {
-        font-size: 25px;
-        position: relative;
-        left: 13%;
-        letter-spacing: 2px;
-        text-align: center;
-        margin-top: 15px;
+        font-size: 15px;
+        letter-spacing: 1.5px;
+        margin-top: 12px;
+        left: 6px;
     }
 
     .flat-button {
-        float: none;
-        display: block;
-        margin: 20px auto 0;
-        width: fit-content;
-        text-align: center;
-        font-size: 20px;
-        padding: 40px 24px;
+        font-size: 10px;
+        padding: 7px 10px;
+        letter-spacing: 2px;
+        margin-top: 15px;
+
+        &:hover {
+            background: yellow;
+            color: #333;
+        }
     }
 
     
