Fixed the sidebar text glitch

--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -337,9 +337,10 @@
 
     .info-map {
         position: relative;
-        top: -15px;
+        top: -25px;
         right: 0px;
         left: 50px;
+        border-radius: 5px;
         
         width: 60%;
         margin-bottom: 1rem;
