--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -132,6 +132,8 @@
     }
 }
 
+
+
 .devImg {
     z-index: 0;
     width: 400px;
@@ -169,6 +171,7 @@
     position: relative;
     left: 5%;
     bottom: 3%;
+    top: 20%;
 }
 
 .card {
@@ -235,6 +238,15 @@
     .tags {
         left: 60px;
         font-size: 15px;
+    }
+
+    .project-page h1{
+        font-size: 40px;
+        padding: 10px;
+
+        &::before{
+            top: -5px;
+        }
     }
 
     .container {
@@ -307,6 +319,15 @@
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
+
+    .project-page h1{
+        font-size: 40px;
+        padding: 10px;
+
+        &::before{
+            top: -5px;
+        }
+    }
     
     .tags {
         left: 60px;
@@ -384,6 +405,15 @@
     }
 }
 @media screen and (min-width: 769px) and (max-width: 1024px) {
+
+    .project-page h1{
+        font-size: 40px;
+        padding: 10px;
+
+        &::before{
+            top: -5px;
+        }
+    }
     // body { background-color: lightcoral; /* Test color */ }
 
     .tags {
