--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -175,6 +175,17 @@ nav {
         line-height: 45px;
     }
 
+    nav a::after { display: none; }
+    
+    nav  {
+        a.active {
+            svg {
+                color: #ffd700;
+            }
+        }
+
+    }
+
   
 }
 
@@ -216,6 +227,17 @@ nav {
     nav a.active svg { color: #ffd700; } nav a:hover svg { color: #ffd700; }
     nav a:hover svg { color: #ffd700; opacity: 1; transition: opacity 0.3s ease-in-out; }
 
+    nav a::after { display: none; }
+    
+    nav  {
+        a.active {
+            svg {
+                color: #ffd700;
+            }
+        }
+
+    }
+
     
 }
 
@@ -249,8 +271,14 @@ nav {
     }
     nav a::after { display: none; }
     
+    nav  {
+        a.active {
+            svg {
+                color: #ffd700;
+            }
+        }
 
-    nav a:hover svg { color: #ffd700; opacity: 1; transition: opacity 0.3s ease-in-out; }
+    }
    
 
    
