--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html{
 body{
   margin: 0;
   font: 300 11px/1.4 'Poppins' 'Helvetica Neue', sans-serif;
-  color: #444;
+  /* color: #444; */
   background-color: #022c43;
   overflow: hidden;
   display: block;
